Se importa la grilla de material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -394,10 +394,9 @@
 
   <div class="card-container">
     
-    <button class="card card-small" (click)="selection.value = 'test'" tabindex="0">
-      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
-      <span>Run and Watch Tests</span>
-    </button>
+    <mat-grid-list cols="2" rowHeight="2:1">
+      <mat-grid-tile>1</mat-grid-tile>
+    </mat-grid-list>
     
   </div>
 
