--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -268,9 +268,6 @@
     z-index: -10;
     width: 1920px;
   }
-  .container-fluid{
-    width: 100%;
-  }
   .subcontainer-fluid{
     width: 90%;
   }
@@ -358,22 +355,20 @@
 
   <!-- Resources -->
   <h2>Personas</h2>
+</div>
   <div class="container-fluid">
-    <mat-grid-list cols="2">
-      <mat-grid-tile class="subcontainer-fluid">
-        <h2>Hola 2</h2>
-        <mat-card class="example-card" *ngFor="let item of personajes" >
+    <mat-grid-list cols="4" class="row">
+      <mat-grid-tile class="col-md-2" *ngFor="let item of personajes">
+        <mat-card>
           <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
             <mat-card-title>{{item.name}}</mat-card-title>
             <mat-card-subtitle>Dog Breed</mat-card-subtitle>
           </mat-card-header>
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <img mat-card-image src="{{item.image}}" class="card-image-top" alt="Photo of a Shiba Inu">
           <mat-card-content>
             <p>
-              The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-              A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-              bred for hunting.
+              {{item.species}}
             </p>
           </mat-card-content>
           <mat-card-actions>
@@ -383,10 +378,8 @@
         </mat-card>
       </mat-grid-tile>
     </mat-grid-list>
-    
   </div>
 
-</div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
