Se ajusta el servicio a construir objetos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -358,7 +358,7 @@
 </div>
   <div class="container-fluid">
     <mat-grid-list cols="4" class="row">
-      <mat-grid-tile class="col-md-2" *ngFor="let item of personajes">
+      <mat-grid-tile class="col-md-2" *ngFor="let item of persons">
         <mat-card>
           <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
